adds skin and gets latlong for google maps

--- a/public/views/about.html
+++ b/public/views/about.html
@@ -2,16 +2,19 @@
 <section id="about" class="container-fluid">
     <div class="photo-container col-lg-4 hidden-sm hidden-xs divider-background p-l-n">
         <div class="background-image-holder">
-            <img src="css/assets/images/chef-lead.jpg" alt="" style="">
+            <img class="aboutLogo" src="css/assets/images/CDRlogo.png" alt="" style="">
         </div>
     </div>
     <div class="row">
         <div class="container">
             <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12 history pull-right">
-            <h2>About us</h2>
-            <h3>We create delecious memories</h3>
-            <p>Non vel adipiscing placerat sit eu etiam in ut nunc pid ac enim turpis placerat, et lorem porta, elementum et lorem placerat placerat, aliquam! Dolor? Et, hac turpis a et! Enim rhoncus adipiscing porttitor dolor sed, placerat turpis elementum placerat, turpis. </p>
-            <p>Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.</p>
+            <h2>Welcome To Casa Del Rio!</h2>
+            <h3>Authentic Sonoran style Mexican cuisine served up fresh, every day, guaranteed!</h3>
+            <p>There's nothing complicated about Casa-Del-Rio Mexican Restaurant. Simply great Mexican food, great service, and great value. These are our commitments to you! We do not serve precooked, frozen, microwaved or vender-prepared items – everything we do is prepared and served up fresh every day, for an authentic Sonoran style Mexican cuisine experience. </p>
+            <h3>Dine-In, Take-Out, & Catering Services</h3>
+            <p>No matter how you want to enjoy Casa-Del-Rio Mexican Restaurant, we can make it happen! Call and ask about any of our services today!
+            <h3>Our Specialties Include:</h3>
+            <p>Chimichangas (the best in Tucson), fajitas, chile rellenos, green and red chile con carne, and Tucson's best fresh salsa made daily!</p>
         </div>
         </div>
     </div>
