--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -1,7 +1,16 @@
-<div class="jumbotron text-center">
-	
-	<h1>Contact</h1>
-
-	<p>{{ tagline }}</p>
-
-</div>
+<!-- Contact section starts -->
+<section id="contact">
+    <div id="map" class="hidden-xs"></div>
+    <div class="container">
+        <div class="contact-details">
+            <h2>Contact</h2>
+            <p>Dishing up authentic mouthwatering Sonoran style lunch, dinner, and take out since 1979!  Tucson's Best Chimichangas & Salsa - Made Fresh Daily!</p>
+            <p>Call now to place your order!</p>
+            <div class="contact-phone"><i class="fa fa-phone-square"></i><a href="tel:520-308-6896"> 520-308-6896</a></div>
+            <div class="contact-email"><i class="fa fa-envelope"></i><a href="contact-us@casadelriorestaurant.com"> contact-us@casadelriorestaurant.com</a></div>
+            <div class="contact-addresss"><i class="fa fa-cutlery"></i> 1060 S. Pantano Road, Tucson, AZ 85710
+            </div>  
+        </div>
+    </div>
+</section> 
+<!-- Contact section ends -->
