--- a/public/views/home.html
+++ b/public/views/home.html
@@ -8,22 +8,21 @@
 
             <!-- Slide 1 -->
             <li>
-                <img src="css/assets/images/Sonoran_Sunset.jpg" width="1280" height="647" alt="slide1" class="img-responsive">
+                <img src="css/assets/images/El-Torito-Bar-food.jpg" width="1280" height="647" alt="slide1" class="img-responsive">
                 <div class="caption">
                 	<h1>Casa Del Rio</h1>
                     <h2>INFLUENCED BY TRADITIONAL SONORAN METHODS</h2>
-                    <p>{{ tagline }}</p>
+                    <p>A Tucson Landmark since 1979</p>
                     <a href="#reservation" class="smooth-scroll btn btn-primary btn-sm">Book Your Table Now</a>
                 </div>
             </li>
 
             <!-- Slide 2 -->
             <li>
-                <img src="css/assets/images/nachos.jpg" width="1280" height="647" alt="slide2" class="img-responsive">
+                <img src="css/assets/images/Mexfood.jpg" width="1280" height="647" alt="slide2" class="img-responsive">
                 <div class="caption">
-
                     <h1>Casa Del Rio</h1>
-                    <h2>INFLUENCED BY TRADITIONAL SONORAN METHODS</h2>
+                    <h2>Authentic Sonoran Style Mexican Cuisine</h2>
                     <p>{{ tagline }}</p>
                     <a href="#reservation" class="btn btn-primary btn-sm">Book Your Table Now</a>
                 </div>
@@ -31,21 +30,21 @@
 
             <!-- Slide 3 -->
             <li>
-                <img src="css/assets/images/navaho_southwestern_native_american_fabric1.jpg" width="1280" height="647" alt="slide3" class="img-responsive">
+                <img src="css/assets/images/enchiladas.jpeg" width="1280" height="647" alt="slide3" class="img-responsive">
                 <div class="caption">
                     <h1>Casa Del Rio</h1>
-                    <h2>INFLUENCED BY TRADITIONAL SONORAN METHODS</h2>
-                    <p>{{ tagline }}</p>
+                    <h2>Authentic Sonoran Style Mexican Cuisine</h2>
+                    <p>A Tucson Landmark since 1979</p>
                     <a href="#reservation" class="btn btn-primary btn-sm">Book Your Table Now</a>
                 </div>
             </li>
              <!-- Slide 4 -->
             <li>
-                <img src="css/assets/images/tacos.jpg" width="1280" height="647" alt="slide3" class="img-responsive">
+                <img src="css/assets/images/tacosmarg.jpg" width="1280" height="647" alt="slide3" class="img-responsive">
                 <div class="caption">
                     <h1>Casa Del Rio</h1>
-                    <h2>INFLUENCED BY TRADITIONAL SONORAN METHODS</h2>
-                    <p>{{ tagline }}</p>
+                    <h2>Authentic Sonoran Style Mexican Cuisine</h2>
+                    <p>A Tucson Landmark since 1979</p>
                     <a href="#reservation" class="btn btn-primary btn-sm">Book Your Table Now</a>
                 </div>
             </li>
