--- a/public/views/index.html
+++ b/public/views/index.html
@@ -16,7 +16,7 @@
 
 <!-- CSS --><!-- Bootstrap (Framework) -->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" /> 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/bootstrap-theme.css">
 <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
@@ -82,17 +82,17 @@
                 <li><a href="#about"><i class="about"></i>About us</a></li>
                 <li><a href="#our-menu"><i class="our-menu"></i>Our Menu</a></li>
                 <li><a href="#gallery"><i class="gallery"></i>Gallery</a></li>
-                <li><a href="#blog"><i class="blog"></i>Blog</a></li>
+                <!-- <li><a href="#blog"><i class="blog"></i>Blog</a></li> -->
                 <li><a href="#reservations"><i class="reservations"></i>Reservations</a></li>
                 <li><a href="#contact"><i class="contact"></i>Contact</a></li>
                 <li><a href="/users"><i class="admin"></i>ADMIN</a></li>
             </ul>
 
             <div class="social clearfix">
-                <a href=""><i class="icon icon-facebook"></i></a>
-                <a href=""><i class="icon icon-twitter"></i></a>
-                <a href=""><i class="icon icon-instagram"></i></a>
-                <a href=""><i class="icon icon-yelp"></i></a>
+                <a href=""><i class="fa fa-facebook"></i></a>
+                <a href=""><i class="fa fa-twitter"></i></a>
+                <a href=""><i class="fa fa-instagram"></i></a>
+                <a href=""><i class="fa fa-yelp"></i></a>
 
             </div>
         </nav>
@@ -114,6 +114,13 @@
         </div>
 
     </div>
+    <!-- Footer starts -->
+    <footer>
+        <div class="container">
+            <p>© Copyright 2016 Casa Del Rio. All Rights Reserved.</p>
+        </div>
+    </footer> 
+    <!-- Footer ends -->
 <!-- Javascripts
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <!-- Jquery library -->
@@ -157,7 +164,7 @@
 <!-- Google Map -->
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
 
-<!-- Prasto plugins -->
+<!-- plugins -->
 <script src="js/main.js"></script>
 
 <!-- End Document
