--- a/public/css/assets/main.css
+++ b/public/css/assets/main.css
@@ -75,11 +75,11 @@ h2 {
 
 @font-face {
   font-family: "prasto-font-icons";
-  src:url("../fonts/prasto-font-icons.eot");
-  src:url("../fonts/prasto-font-icons.eot?#iefix") format("embedded-opentype"),
-    url("../fonts/prasto-font-icons.woff") format("woff"),
-    url("../fonts/prasto-font-icons.ttf") format("truetype"),
-    url("../fonts/prasto-font-icons.svg#prasto-font-icons") format("svg");
+  src:url("fonts/prasto-font-icons.eot");
+  src:url("fonts/prasto-font-icons.eot?#iefix") format("embedded-opentype"),
+    url("fonts/prasto-font-icons.woff") format("woff"),
+    url("fonts/prasto-font-icons.ttf") format("truetype"),
+    url("fonts/prasto-font-icons.svg#prasto-font-icons") format("svg");
   font-weight: normal;
   font-style: normal;
 
@@ -341,6 +341,13 @@ h2 {
     padding-bottom: 0;
 }
 
+.homeLogo img {
+    width: 40px;
+    height: 40px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 .slides .btn-primary{
     margin-top: 20px;
 }
@@ -367,7 +374,7 @@ h2 {
 }
 
 .video-overlay {
-    background: #000 url(../images/brilliant.png);
+    background: #000 url( images/brilliant.png );
     bottom: 0;
     left: 0;
     position: absolute;
@@ -397,6 +404,7 @@ h2 {
     text-transform: uppercase;
 }
 
+
 .history {
     padding-top: 50px;
     padding-bottom: 50px;
@@ -404,20 +412,28 @@ h2 {
 }
 
 .photo-container{
-        position: absolute;
+    position: absolute;
     height: 100%;
     top: 0px;
     left:0;
 }
-
+/*mages/navaho_southwestern_native_american_fabric1.jpg*/
 .background-image-holder{
-   background: url(../images/chef-lead.jpg) 50% 0% no-repeat;
+   background: url( images/MargGuac.jpg ) 50% 0% no-repeat;
     width: 425px;
     height: 100%;
     z-index: 0;
     background-size: cover !important;
     top: -20%;
 }
+
+.background-image-holder img {
+    position: relative;
+    left: 120px;
+    padding-top: 20px;
+
+}
+
 .divider-background {
     background-size: cover !important;
     overflow: hidden;
@@ -432,7 +448,7 @@ h2 {
 }
 
 #our-menu {
-    background: #161615 url(../images/barbeque-bg.jpg) no-repeat;
+    background: rgb(8,4,2);
     padding: 50px 0;
     color: #fff;
     -webkit-background-size: cover;
@@ -579,7 +595,7 @@ figure.item:hover img {
 
 /* Blog Section
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-#blog {
+/*#blog {
     padding: 50px 0;
     background: #0C0C0C;
     color: #fff;
@@ -613,7 +629,7 @@ figure.item:hover img {
 
 .post .content {
     margin-top: 20px;
-}
+}*/
 
 
 /* Reservation Section
@@ -621,6 +637,13 @@ figure.item:hover img {
 
 .reservation {
     text-align: center;
+}
+
+#reservation.clearfix.reservation {
+    background-image: url( images/southwestern-upholstery-fabric.jpg );
+    background-size: cover;
+    background-color: gray;
+
 }
 
 .reserve-header p {
@@ -650,7 +673,7 @@ figure.item:hover img {
 }
 
 .reserve-header {
-    background: url(../images/dinner-table.jpg)  no-repeat;
+    background: url( images/dinner-table.jpg )  no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
     padding: 50px 0;
