works on adding fa icons

--- a/public/views/reservation.html
+++ b/public/views/reservation.html
@@ -1,4 +1,8 @@
 <!-- Reservation section starts -->
+<head>
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+</head>
 <section id="reservation" class="clearfix reservation">
     <div class="reserve-header">
         <div class="container">
@@ -49,7 +53,7 @@
                     <div class="form-group">
                         <label class="sr-only" for="pickdate">Select date</label>
                         <div class="input-group">
-                            <div class="input-group-addon"><i class="icon icon-date"></i></div>
+                            <div class="input-group-addon"><i class="fa fa-calendar"></i></div>
                             <input type="text" class="form-control" id="pickdate" placeholder="Select date">
                         </div>
                     </div>
