--- a/public/css/assets/main.css
+++ b/public/css/assets/main.css
@@ -371,6 +371,7 @@ h2 {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 16px;
+    padding-top: 20px;
 }
 
 .video-overlay {
@@ -672,6 +673,13 @@ figure.item:hover img {
     color: #fff;
 }
 
+.col-sm-6.f-n.center-block {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
 .reserve-header {
     background: url( images/dinner-table.jpg )  no-repeat;
     -webkit-background-size: cover;
@@ -749,8 +757,8 @@ figure.item:hover img {
     margin-bottom: 25px;
 }
 
-.form-custom .icon{
-        margin-top: 4px;
+.form-custom .icon {
+    margin-top: 4px;
     font-size: 16px;
     display: inline-block;
     color:#777;
