--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -1,4 +1,8 @@
 <!-- Contact section starts -->
+<head>
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+</head>
 <section id="contact">
     <div id="map" class="hidden-xs"></div>
     <div class="container">
