--- a/public/views/index.html
+++ b/public/views/index.html
@@ -21,6 +21,7 @@
 <link rel="stylesheet" href="css/bootstrap-theme.css">
 <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Montserrat'>
 
+
 <!-- Full Screen Background Slides -->
 <link rel="stylesheet" href="js/superslides/superslides.css">
 
@@ -51,8 +52,10 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
+<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.0.min.js"></script>
 <script src="/components/jquery/jquery.js"></script>
 <script src="/components/angular/angular.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC4osadv5i4mC0Xpk5SsKjm9jQYelk09NI"></script>
 
 <!-- ANGULAR CUSTOM -->
 <script src="js/controllers/MainCtrl.js"></script>
