works on menu ng-click ng-if

--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -15,3 +15,5 @@
     </div>
 </section> 
 <!-- Contact section ends -->
+<!-- Google Map -->
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
