--- a/public/views/home.html
+++ b/public/views/home.html
@@ -20,7 +20,7 @@
             <!-- Slide 2 -->
             <li>
                 <img src="css/assets/images/Mexfood.jpg" width="1280" height="647" alt="slide2" class="img-responsive">
-                <div class="caption">
+                <div class="caption" ng-controller="MainCtrl">
                     <h1>Casa Del Rio</h1>
                     <h2>Authentic Sonoran Style Mexican Cuisine</h2>
                     <p>{{ tagline }}</p>
