works on menu ng-show

--- a/public/views/our-menu.html
+++ b/public/views/our-menu.html
@@ -1,7 +1,7 @@
 
 <!-- Our Menu section starts -->
 <section id="our-menu">
-    <div class="container" data-ng-app="casaApp" ng-controller="OurMenuController as OurMenuCtrl">
+    <div class="container" data-ng-app="casaApp" ng-controller="OurMenuCtrl">
         <h2>Our Menu</h2>                  
         <div class="menu-table">
             <!-- Menu tabs -->
