--- a/public/views/about.html
+++ b/public/views/about.html
@@ -19,5 +19,5 @@
         </div>
     </div>
 </section> <!-- About section starts -->
-<!-- Prasto plugins -->
-<script src="js/main.js"></script>
+<!-- Template plugins -->
+<!-- <script src="js/main.js"></script> -->
