--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -1,7 +1,6 @@
 <!-- Contact section starts -->
-
 <section id="contact">
-    <div id="map" class="hidden-xs"></div>
+    <div id="map"></div>
     <div class="container">
         <div class="contact-details">
             <h2>Contact</h2>
@@ -16,4 +15,4 @@
 </section> 
 <!-- Contact section ends -->
 <!-- Google Map -->
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+<!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script> -->
