--- a/public/views/home.html
+++ b/public/views/home.html
@@ -5,11 +5,11 @@
     <!-- Home section starts -->
     <section id="home" class="slides">
         <ul class="slides-container">
-
             <!-- Slide 1 -->
             <li>
                 <img src="css/assets/images/El-Torito-Bar-food.jpg" width="1280" height="647" alt="slide1" class="img-responsive">
                 <div class="caption">
+                    <span><img id="homeLogo" src="css/assets/images/CDRlogo.png" class="cdrLogo" height="200" width="200"></span>
                 	<h1>Casa Del Rio</h1>
                     <h2>INFLUENCED BY TRADITIONAL SONORAN METHODS</h2>
                     <p>A Tucson Landmark since 1979</p>
@@ -21,9 +21,10 @@
             <li>
                 <img src="css/assets/images/Mexfood.jpg" width="1280" height="647" alt="slide2" class="img-responsive">
                 <div class="caption" ng-controller="MainCtrl">
+                    <span><img id="homeLogo" src="css/assets/images/CDRlogo.png" class="cdrLogo" height="200" width="200"></span>
                     <h1>Casa Del Rio</h1>
                     <h2>Authentic Sonoran Style Mexican Cuisine</h2>
-                    <p>{{ tagline }}</p>
+                    <p>A Tucson Landmark since 1979</p>
                     <a href="#reservation" class="btn btn-primary btn-sm">Book Your Table Now</a>
                 </div>
             </li>
@@ -32,6 +33,7 @@
             <li>
                 <img src="css/assets/images/enchiladas.jpeg" width="1280" height="647" alt="slide3" class="img-responsive">
                 <div class="caption">
+                    <span><img id="homeLogo" src="css/assets/images/CDRlogo.png" class="cdrLogo" height="200" width="200"></span>
                     <h1>Casa Del Rio</h1>
                     <h2>Authentic Sonoran Style Mexican Cuisine</h2>
                     <p>A Tucson Landmark since 1979</p>
@@ -42,20 +44,21 @@
             <li>
                 <img src="css/assets/images/tacosmarg.jpg" width="1280" height="647" alt="slide3" class="img-responsive">
                 <div class="caption">
+                    <span><img id="homeLogo" src="css/assets/images/CDRlogo.png" class="cdrLogo" height="200" width="200"></span>
                     <h1>Casa Del Rio</h1>
                     <h2>Authentic Sonoran Style Mexican Cuisine</h2>
                     <p>A Tucson Landmark since 1979</p>
-                    <a href="#reservation" class="btn btn-primary btn-sm">Book Your Table Now</a>
+                    <a href="reservation" class="btn btn-primary btn-sm">Book Your Table Now</a>
                 </div>
             </li>
         </ul>
     </section> <!-- Home section ends -->
 
     <!-- Jquery library -->
-    <script src="js/vendor/jquery-1.11.2.min.js"></script>
+    <!--script src="js/vendor/jquery-1.11.2.min.js"></script-->
 
     <!-- Preloader -->
-    <script type="text/javascript">
+    <!--script type="text/javascript">
         //<![CDATA[
             $(window).load(function() { // makes sure the whole site is loaded
                 $('#status').fadeOut(); // will first fade out the loading animation
@@ -63,16 +66,16 @@
                 $('body').delay(350).css({'overflow':'visible'});
             })
         //]]>
-    </script> 
+    <!/script--> 
 
     <!-- Bootstrap (Framework) -->
-    <script src="js/vendor/bootstrap.min.js"></script>
+    <!--script src="js/vendor/bootstrap.min.js"></script-->
 
     <!-- Full Screen Background Slides -->
-    <script src="js/superslides/jquery.superslides.min.js"></script>
+    <!--script src="js/superslides/jquery.superslides.min.js"></script>
 
-    <!-- Prasto plugins -->
-    <script src="js/main.js"></script>
+    <!- plugins -->
+    <!--script src="js/main.js"></script-->
 
     <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
