--- a/public/views/our-menu.html
+++ b/public/views/our-menu.html
@@ -1,25 +1,25 @@
 
 <!-- Our Menu section starts -->
 <section id="our-menu">
-    <div class="container" data-ng-app="casaApp" ng-controller="OurMenuCtrl">
+    <div class="container">
         <h2>Our Menu</h2>                  
         <div class="menu-table">
             <!-- Menu tabs -->
             <ul class="nav nav-tabs  menu-tabs" role="tablist">
                 <li class="active">
-                    <a href="appetizers" ng-click="changeMenu()" aria-controls="appetizers" role="tab" data-toggle="tab" class="icon icon-home"><span>Sopa-Ensaladas-Botanas</span></a>
+                    <a href="" ng-click="appetizers=true" aria-controls="appetizers" role="tab" data-toggle="tab" class="icon icon-home"><span>Sopa-Ensaladas-Botanas</span></a>
                 </li>
                 <li>
-                    <a ui-sref="pastas" ng-click="changeMenu()" aria-controls="pastas" role="tab" data-toggle="tab">Especialidades Mexicanas</a>
+                    <a href="" ng-click="pastas=true" aria-controls="pastas" role="tab" data-toggle="tab">Especialidades Mexicanas</a>
                 </li>
                 <li>
-                    <a ui-sref="pizza" ng-click="changeMenu()" aria-controls="pizza" role="tab" data-toggle="tab">Chimichangas</a>
+                    <a href="" ng-click="pizza=true" aria-controls="pizza" role="tab" data-toggle="tab">Chimichangas</a>
                 </li>
                 <li>
-                    <a ui-sref="entrees" ng-click="changeMenu()" aria-controls="entrees" role="tab" data-toggle="tab">Fajitas</a>
+                    <a href="" ng-click="entrees=true" aria-controls="entrees" role="tab" data-toggle="tab">Fajitas</a>
                 </li>
                 <li>
-                    <a ui-sref="desserts" ng-click="changeMenu()" aria-controls="desserts" role="tab" data-toggle="tab">Pollo Borracha</a>
+                    <a href="" ng-click="desserts=true" aria-controls="desserts" role="tab" data-toggle="tab">Pollo Borracha</a>
                 </li>
             </ul> 
         </div>
@@ -481,14 +481,14 @@
 <!-- Javascripts
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <!-- Smooth one page scroll -->
-<script src="js/jquery-one-page-nav/jquery.nav.js"></script>
+<!-- <script src="js/jquery-one-page-nav/jquery.nav.js"></script> -->
 
 <!-- Jquery library -->
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-<script src="js/vendor/jquery-1.11.2.min.js"></script>
+<!-- <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script> -->
+<!-- <script src="js/vendor/jquery-1.11.2.min.js"></script> -->
 
 <!-- Bootstrap (Framework) -->
-<script src="js/vendor/bootstrap.min.js"></script>
+<!-- <script src="js/vendor/bootstrap.min.js"></script> -->
 
 <!-- Prasto plugins -->
-<script src="js/main.js"></script>
+<!-- <script src="js/main.js"></script> -->
